--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -19,8 +19,6 @@ limitations under the License.
 .animContainer {
   position: absolute;
   left: 0px;
-  height: 75px;
-  border-right: 1px solid black;
 }
 
 .anim {
@@ -29,6 +27,11 @@ limitations under the License.
   height: 25px;
   background-color: #FAA;
   position: relative;
+}
+
+.expected {
+  height: 25px;
+  border-right: 1px solid black;
 }
 
 #ca {
@@ -46,7 +49,6 @@ limitations under the License.
   width: 100px;
 }
 
-
 #cd {
   top: 350px;
   width: 280px;
@@ -58,27 +60,27 @@ iteration (or start if reversed).</div>
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
+  <div class="expected" style="width: 280px;"><div class="anim a"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim b"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
+  <div class="expected" style="width: 200px;"><div class="anim a"></div></div>
+  <div class="expected" style="width: 200px;"><div class="anim b"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
+  <div class="expected" style="width: 200px;"><div class="anim a"></div></div>
+  <div class="expected" style="width: 200px;"><div class="anim b"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
+  <div class="expected" style="width: 280px;"><div class="anim a"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim b"></div></div>
+  <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
 </div>
 
 <script src="../../web-animation.js"></script>
