Adds loadEditor() to load the try-it-yourself object

--- a/tutorial/basic-animations/basic-animation-exercise-1.html
+++ b/tutorial/basic-animations/basic-animation-exercise-1.html
@@ -17,6 +17,8 @@ specific language governing permissions and limitations under the License.
 
 <div class="content">
 
+  <div id="animNum">1</div>
+
   <div class="heading subTitle">Create a new basic animation</div>
 
   <div class="heading exercises">Exercise 1 - Moving Right</div>
