Restart the polyfill ticker when setting properties on a TimedItem
This is required to make sure that the polyfill starts animating if no
animations are currently active, but an animation's properties are modified
such that it becomes active.

This fixes https://github.com/web-animations/web-animations-js/issues/86

Also fix a stale TODO.

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -44,6 +44,7 @@ var tests = [
   'test-preset-timings.html',
   'test-rectangle.html',
   'test-reparent.html',
+  'test-restart.html',
   'test-seq-speed.html',
   'test-set-parent.html',
   'test-start-time-iterations.html',
