--- a/test/testcases/test-set-parent.html
+++ b/test/testcases/test-set-parent.html
@@ -75,18 +75,6 @@ try {
       "Expected error exception message");
 }
 
-// Test that parent must be an AnimationGroup when assigning to parentGroup.
-var child = new Animation(elem, animFunc);
-try {
-  child.parentGroup = anim;
-  fail("Setting parentGroup to an Animation should throw");
-} catch(e) {
-  check(e.message, "parentGroup is not an AnimationGroup",
-      "Expected error exception message");
-}
-check(child.parentGroup, document.animationTimeline,
-    "Child's parent should still be document.animationTimeline");
-
 // Test that updates are made to child when constructing parent.
 var parent = new ParGroup([anim]);
 check(anim.parentGroup, parent, "Child's parentGroup should be set to parent");
@@ -110,28 +98,15 @@ check(parent.children.length, 0,
 check(newParent.children.length, 1, "New parent should now have 1 child");
 check(newParent.children[0], child, "New parent should now have correct child");
 
-// Test that updates are made to previous and new parent when assigning to
-// parentGroup.
+// Test that updates are made to previous and new parent when using add().
 var newerParent = new ParGroup();
-child.parentGroup = newerParent;
+newerParent.add(child);
 check(child.parentGroup, newerParent,
     "Child's parentGroup should be updated to new parent");
 check(newParent.children.length, 0,
     "Previous parent should no longer have children");
 check(newerParent.children.length, 1, "New parent should now have 1 child");
 check(newerParent.children[0], child,
-    "New parent should now have correct child");
-
-// Test that updates are made to previous and new parent when using add().
-// parentGroup.
-var newestParent = new ParGroup();
-newestParent.add(child);
-check(child.parentGroup, newestParent,
-    "Child's parentGroup should be updated to new parent");
-check(newerParent.children.length, 0,
-    "Previous parent should no longer have children");
-check(newestParent.children.length, 1, "New parent should now have 1 child");
-check(newestParent.children[0], child,
     "New parent should now have correct child");
 
 // Test that calling add() with an existing child causes that child to be moved
@@ -150,13 +125,12 @@ check(seqGroup.children[1], child, "Second child should be 'child'");
 check(sibling.startTime, 0.0, "Start time of 'sibling'");
 check(child.startTime, 1.0, "Start time of 'child'");
 
-// Test that reseting TimedItem.parentGroup to its existing value causes that
-// item to be moved to the end of its parent's list list of children.
-sibling.parentGroup = sibling.parentGroup;
+// Test that setting TimedItem.parentGroup is ignored.
+anim.parentGroup = null;
 check(seqGroup.children.length, 2, "seqGroup.children.length");
-check(seqGroup.children[0], child, "First child should be 'child'");
-check(seqGroup.children[1], sibling, "Second child should be 'sibling'");
-check(child.startTime, 0.0, "Start time of 'child'");
-check(sibling.startTime, 1.0, "Start time of 'sibling'");
+check(seqGroup.children[0], sibling, "First child should be 'sibling'");
+check(seqGroup.children[1], child, "Second child should be 'child'");
+check(sibling.startTime, 0.0, "Start time of 'sibling'");
+check(child.startTime, 1.0, "Start time of 'child'");
 
 </script>
