--- a/test/testcases/test-playback-rate.html
+++ b/test/testcases/test-playback-rate.html
@@ -95,8 +95,7 @@ var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
-  var group = new ParGroup([], {direction: dir, duration: 3}, undefined, 1);
-  groups.push(group);
+  groups.push(new ParGroup([], {direction: dir, duration: 3}));
 }
 
 for (var i = 0; i < containers.length; i++) {
