--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -40,7 +40,7 @@ limitations under the License.
 }
 
 #cb {
-  top: 300px;
+  top: 150px;
   width: 200px;
 }
 
@@ -51,19 +51,11 @@ limitations under the License.
 <div class="animContainer" id="ca">
   <div style="width: 400px;" class="expected"><div class="anim a"></div></div>
   <div style="width: 400px;" class="expected"><div class="anim b"></div></div>
-  <div style="width: 400px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 400px;" class="expected"><div class="anim d"></div></div>
-  <div style="width: 400px;" class="expected"><div class="anim e"></div></div>
-  <div style="width: 400px;" class="expected"><div class="anim f"></div></div>
 </div>
 
 <div class="animContainer" id="cb">
   <div style="width: 200px;" class="expected"><div class="anim a"></div></div>
   <div style="width: 200px;" class="expected"><div class="anim b"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim d"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim e"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim f"></div></div>
 </div>
 
 <script src="../../web-animation.js"></script>
@@ -77,43 +69,13 @@ var animation = {left: ["100px", "300px"]};
 
 for (var i = 0; i < directions.length; i++) {
   var container = document.getElementById(containers[i]);
-  // Explicit child start time and parent duration.
+  // Explicit parent duration.
   new Animation(container.getElementsByClassName("a")[0], animation,
       {duration: 1.0},
       new ParGroup([],
-          {iterationCount: 2.0, direction: directions[i], duration: 1.0}),
-      0.0);
-  // Explicit child start time, parent calculates intrinsic duration.
+          {iterationCount: 2.0, direction: directions[i], duration: 1.0}));
+  // Parent calculates intrinsic duration.
   new Animation(container.getElementsByClassName("b")[0], animation,
-      {duration: 1.0},
-      new ParGroup([], {iterationCount: 2.0, direction: directions[i]}),
-      0.0);
-  // Default child start time, explicit parent duration.
-  new Animation(container.getElementsByClassName("c")[0], animation,
-      {duration: 1.0},
-      new ParGroup([],
-          {iterationCount: 2.0, direction: directions[i], duration: 1.0}));
-  // Default child start time, explicit parent duration, plus explicit parent
-  // group zero start time.
-  new Animation(container.getElementsByClassName("d")[0], animation,
-      {duration: 1.0},
-      new ParGroup([],
-          {iterationCount: 2.0, direction: directions[i], duration: 1.0}));
-  // Default child start time, explicit parent duration, plus explicit parent
-  // group non-zero start time. Note that for both "normal" and "reverse"
-  // parents, parent iteration time is null, so child start time is zero, and
-  // animation proceeds as above.
-  new Animation(container.getElementsByClassName("e")[0], animation,
-      {duration: 1.0},
-      new ParGroup([],
-	  {iterationCount: 2.0, direction: directions[i], duration: 1.0},
-          undefined, 0.5));
-  // Default child start time and parent duration. Note that for "normal"
-  // parent, child start time will be 0.0, so animation proceeds as above. For
-  // "reverse" parent, child start time will be 0.0, as this is the parent
-  // iteration time at the time of creation, but maximum parent iteration time
-  // is 1.0, so animation proceeds as above.
-  new Animation(container.getElementsByClassName("f")[0], animation,
       {duration: 1.0},
       new ParGroup([], {iterationCount: 2.0, direction: directions[i]}));
 }
