--- a/test/testcases/test-reparent.html
+++ b/test/testcases/test-reparent.html
@@ -45,8 +45,8 @@ var anim = new Animation(document.getElementById("a"),
 
 // After 2.5s, move it to a parallel group and run that.
 setTimeout(function() {
-  new ParGroup([anim], {direction: "alternate", duration: 2.0,
-      iterationCount: 2.0});
+  new ParGroup([anim],
+      {direction: "alternate", duration: 2.0, iterationCount: 2.0});
 }, 2500);
 
 // Move it to a new group and run that.
