--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -80,8 +80,8 @@ for (var i = 0; i < directions.length; i++) {
   // Explicit child start time and parent duration.
   new Animation(container.getElementsByClassName("a")[0], animation,
       {duration: 1.0},
-      new ParGroup([], {iterationCount: 2.0, direction: directions[i],
-          duration: 1.0}),
+      new ParGroup([],
+          {iterationCount: 2.0, direction: directions[i], duration: 1.0}),
       0.0);
   // Explicit child start time, parent calculates intrinsic duration.
   new Animation(container.getElementsByClassName("b")[0], animation,
@@ -94,8 +94,8 @@ for (var i = 0; i < directions.length; i++) {
   // iteration time is 1.0, so animation never runs.
   new Animation(container.getElementsByClassName("c")[0], animation,
       {duration: 1.0},
-      new ParGroup([], {iterationCount: 2.0, direction: directions[i],
-          duration: 1.0}));
+      new ParGroup([],
+          {iterationCount: 2.0, direction: directions[i], duration: 1.0}));
   // Default child start time, explicit parent duration, plus explicit parent
   // group zero start time. As above, but we have to extend the parent duration
   // to avoid the "normal" child animation being clipped. This is because
@@ -104,16 +104,18 @@ for (var i = 0; i < directions.length; i++) {
   // the child end time to exceed 1.0.
   new Animation(container.getElementsByClassName("d")[0], animation,
       {duration: 1.0},
-      new ParGroup([], {iterationCount: 2.0, direction: directions[i],
-          duration: 2.0}, undefined, 0.0));
+      new ParGroup([],
+	  {iterationCount: 2.0, direction: directions[i], duration: 2.0},
+          undefined, 0.0));
   // Default child start time, explicit parent duration, plus explicit parent
   // group non-zero start time. Note that for both "normal" and "reverse"
   // parents, parent iteration time is null, so child start time is zero, and
   // animation proceeds as above.
   new Animation(container.getElementsByClassName("e")[0], animation,
       {duration: 1.0},
-      new ParGroup([], {iterationCount: 2.0, direction: directions[i],
-          duration: 1.0}, undefined, 0.5));
+      new ParGroup([],
+	  {iterationCount: 2.0, direction: directions[i], duration: 1.0},
+          undefined, 0.5));
   // Default child start time and parent duration. Note that for "normal"
   // parent, child start time will be 0.0, so animation proceeds as above. For
   // "reverse" parent, child start time will be 0.0, as this is the parent
