--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -69,21 +69,21 @@ that the position of the last element in each group is approximate.</div>
   <div style="width: 100px;" class="expected"><div class="anim a"></div></div>
   <div style="width: 100px;" class="expected"><div class="anim b"></div></div>
   <div style="width: 200px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 100px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 200px;" class="expected"><div class="anim d"></div></div>
 </div>
 
 <div class="animContainer" id="cc">
   <div style="width: 100px;" class="expected"><div class="anim a"></div></div>
   <div style="width: 100px;" class="expected"><div class="anim b"></div></div>
   <div style="width: 200px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 100px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 200px;" class="expected"><div class="anim d"></div></div>
 </div>
 
 <div class="animContainer" id="cd">
   <div style="width: 600px;" class="expected"><div class="anim a"></div></div>
   <div style="width: 600px;" class="expected"><div class="anim b"></div></div>
   <div style="width: 600px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 400px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 600px;" class="expected"><div class="anim d"></div></div>
 </div>
 
 <script src="../../web-animation.js"></script>
@@ -116,14 +116,9 @@ for (var i = 0; i < directions.length; i++) {
   new Animation(container.getElementsByClassName("b")[0], animation,
       {duration: 1.0}, groupWithFixedDuration(direction), 1.0);
   // Interaction of default start time with parent iterations. At the time of
-  // addition, the first group has a duration, and hence iteration time of
-  // zero, so the child picks up a start time of zero.  The parent then updates
+  // addition, the child picks up a start time of zero. The parent then updates
   // its duration and its iteration time jumps, causing the child to start
-  // playing part way through the animation, The second group has finite
-  // duration, so the child picks up its current iteration time as its start
-  // time, so plays the complete animation. In iterations where the parent
-  // plays backwards, the above is reversed. Also, if the first iteration plays
-  // backwards, the child will miss it altogether.
+  // playing part way through the animation.
   setTimeout(function(container, group1, group2) {
     return function() {
       new Animation(container.getElementsByClassName("c")[0], animation,
