--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 Copyright 2012 Google Inc. All Rights Reserved.
 
 Licensed under the Apache License, Version 2.0 (the "License");
@@ -58,50 +58,55 @@ limitations under the License.
         position: absolute;
       }
       .txt {
-        width: 7	00px;
+        width: 700px;
         position: relative;
       }
     </style>
-  </head> 
+  </head>
   <body>
-    <div class="txt">The animation should have a circle changes colour as it moves along the edge of a rectangular box,
-         a red circle moving towards all 4 corners and back to the center of the box,
-         2 square that rotates and move along the top and bottom edge of the box. The circle that changes
-         colour should moves in alternate directions.</div>
-    <div class="txt"></div>
-    <div class="txt">Somehow the circle that changes colour jumps to different spots after finish it's first round.
-         Other elements move as expected.</div>
-         
-    <div id="main">    
-    <div class="anim" id="a"></div>
-    <div class="block" id="blockA"></div>
-    <div class="anim" id="b"></div>
-    <div class="block" id="blockB"></div>
-  </div>
-  <script src="../web-animation.js"></script>
-  <script>
-    var around1 = new Animation(document.querySelector("#a"), {left: "450px"}, 2);
-    var around2 = new Animation(document.querySelector("#a"), {"background-color": ["lightsteelblue", "red", "green", "lightsteelblue"]}, 8);
-    var around3 = new Animation(document.querySelector("#a"), {top: "250px"}, {startDelay: 2, duration: 2});
-    var around4 = new Animation(document.querySelector("#a"), {left: "0px"}, {startDelay: 4, duration: 2});
-    var around5 = new Animation(document.querySelector("#a"), {top: "0px"}, {startDelay: 6, duration: 2});
-    var blueBallMove = new ParGroup([around1, around2, around3, around4, around5], {iterationCount: 2, direction: "alternate", duration: 8});
-	
-    var redBallMove = new SeqGroup([], {duration: 16});
-    new Animation(document.querySelector("#b"), {top: "0px", left: "0px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "0px", left: "450px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "250px", left: "450px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "250px", left: "0px"}, 2, redBallMove);
-    new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
-    
-    new ParGroup([blueBallMove, redBallMove]);
+    <div class="txt">The animation consists of ...
+      <ul>
+        <li>a circle which changes colour as it moves along the edges of the box
+        <li>a red circle which moves towards all 4 corners and back to the
+          center of the box
+        <li>2 squares that rotate and move along the top and bottom edges of the
+          box
+      </ul>
+    </div>
+    <div class="txt">Somehow the circle that changes colour jumps to different
+      spots after finishing its first round. Other elements move as expected.
+    </div>
 
-    var transformGroup = new ParGroup([]);
-    new Animation(document.querySelector("#blockA"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4, transformGroup);
-    new Animation(document.querySelector("#blockB"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4, transformGroup); 
-  </script>              
+    <div id="main">
+      <div class="anim" id="a"></div>
+      <div class="block" id="blockA"></div>
+      <div class="anim" id="b"></div>
+      <div class="block" id="blockB"></div>
+    </div>
+    <script src="../web-animation.js"></script>
+    <script>
+      var around1 = new Animation(document.querySelector("#a"), {left: "450px"}, 2);
+      var around2 = new Animation(document.querySelector("#a"), {"background-color": ["lightsteelblue", "red", "green", "lightsteelblue"]}, 8);
+      var around3 = new Animation(document.querySelector("#a"), {top: "250px"}, {startDelay: 2, duration: 2});
+      var around4 = new Animation(document.querySelector("#a"), {left: "0px"}, {startDelay: 4, duration: 2});
+      var around5 = new Animation(document.querySelector("#a"), {top: "0px"}, {startDelay: 6, duration: 2});
+      var blueBallMove = new ParGroup([around1, around2, around3, around4, around5], {iterationCount: 2, direction: "alternate", duration: 8});
+
+      var redBallMove = new SeqGroup([], {duration: 16});
+      new Animation(document.querySelector("#b"), {top: "0px", left: "0px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "0px", left: "450px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "250px", left: "450px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "250px", left: "0px"}, 2, redBallMove);
+      new Animation(document.querySelector("#b"), {top: "125px", left: "225px"}, 2, redBallMove);
+
+      new ParGroup([blueBallMove, redBallMove]);
+
+      var transformGroup = new ParGroup([]);
+      new Animation(document.querySelector("#blockA"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(-450px, 0px) rotate(180deg)"]} , 4, transformGroup);
+      new Animation(document.querySelector("#blockB"), {"-webkit-transform": ["translate(0px, 0px) rotate(0deg)", "translate(450px, 0px) rotate(270deg)"]} , 4, transformGroup);
+    </script>
   </body>
 </html>
