--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -54,6 +54,9 @@ var tests = [
   'test-text-shadow.html',
   'test-timing-functions.html',
   'test-to-animation.html',
+  'test-transform-3d.html',
+  'test-transform-primitives.html',
+  'test-transform-units.html',
   'test-visibility.html',
 ];
 </script>
