--- a/test/testcases/test-document-timeline.html
+++ b/test/testcases/test-document-timeline.html
@@ -35,6 +35,7 @@ body.fail div#fail {
 
 <div id="pass">PASS</div>
 <div id="fail">FAIL</div>
+<div id="anim"></div>
 
 <script src="../../web-animation.js"></script>
 <script>
@@ -52,9 +53,47 @@ var checkNotEqual = function(actual, unexpected, failureMessage) {
   }
 };
 
+var check = function(actual, expected, failureMessage) {
+  if (actual != expected) {
+    fail(failureMessage + ". Expected '" + expected + "', got '" + actual +
+        "'.");
+  }
+};
+
+var clockMillis = function() {
+  return typeof performance === "object" &&
+      typeof performance.now === "function" ?
+      performance.now() : Date.now();
+};
+
+function sleep() {
+  var startTime = clockMillis();
+  while (startTime === clockMillis()) {}
+}
+
 // Test that document.timeline.currentTime is read-only.
 document.timeline.currentTime = 1;
 checkNotEqual(document.timeline.currentTime, 1,
     "document.timeline.currentTime should be read-only");
+
+// Test that document.timeline.currentTime is null before the document load
+// event.
+check(document.timeline.currentTime, null,
+    "document.timeline.currentTime should be null before document load event");
+
+// Test that Player.currentTime is null before the document load event.
+var animation = new Animation(document.getElementById("anim"), {left: "100px"});
+check(document.timeline.createPlayer(animation).currentTime, null,
+    "Player.currentTime should be null before document load event");
+
+// Test that document.timeline.currentTime is constant within a JavaScript
+// callstack.
+setTimeout(function() {
+  var time = document.timeline.currentTime;
+  sleep();
+  check(document.timeline.currentTime, time,
+      "document.timeline.currentTime time should be constant in JavaScript " +
+      "callstack");
+}, 0);
 
 </script>
