Fix repeated pausing of Player

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -45,6 +45,7 @@ var tests = [
   'test-preset-timings.html',
   'test-rectangle.html',
   'test-reparent.html',
+  'test-repeated-pause.html',
   'test-restart.html',
   'test-seq-speed.html',
   'test-set-parent.html',
