Make Timeline.currentTime a read-only property rather than a method
See https://github.com/web-animations/web-animations-js/issues/107

--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -24,6 +24,7 @@ var tests = [
   'test-composite-transforms.html',
   'test-compositing-order.html',
   'test-compositor.html',
+  'test-document-timeline.html',
   'test-duration.html',
   'test-fill-values.html',
   'test-font-weight.html',
