--- a/demo_example.html
+++ b/demo_example.html
@@ -111,7 +111,7 @@ div#links {
   <a href="#" onclick="eighth()">eighth</a>
 </div>
 
-<script src="web-animation.js"></script>
+<script src="web-animations.js"></script>
 <script>
 
 // STEP 1
@@ -186,4 +186,4 @@ function eighth() {
   group.play();
 }
 </script>
-<script src="web-animation-visualization.js"></script>
+<script src="web-animations-visualization.js"></script>
