--- a/demos/car-demo.html
+++ b/demos/car-demo.html
@@ -129,7 +129,7 @@
 </div>
 <button id="buttonA" class="button">Go!</button>
 
-<script src="../web-animation.js"></script>
+<script src="../web-animations.js"></script>
 <script>
   var lightOff = "rgb(50,50,50)";
 
