--- a/demos/test-circle-square.html
+++ b/demos/test-circle-square.html
@@ -80,7 +80,7 @@ limitations under the License.
       <div class="anim" id="b"></div>
       <div class="block" id="blockB"></div>
     </div>
-    <script src="../web-animation.js"></script>
+    <script src="../web-animations.js"></script>
     <script>
       var around1 = new Animation(document.querySelector("#a"), {left: "450px"}, 2);
       var around2 = new Animation(document.querySelector("#a"), {"background-color": ["lightsteelblue", "red", "green", "lightsteelblue"]}, 8);
