--- a/test/testcases/test-bounds.html
+++ b/test/testcases/test-bounds.html
@@ -42,7 +42,7 @@ div.anim {
 <div id="anim1" class="anim"></div>
 <div id="anim2" class="anim"></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var fail = function(failureMessage) {
