--- a/test/testcases/test-calc.html
+++ b/test/testcases/test-calc.html
@@ -105,7 +105,7 @@ completely cover the light red box when the animation has finished.
   <div class="anim" id="g"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var dt = document.timeline;
