--- a/test/testcases/test-change-playback-rate.html
+++ b/test/testcases/test-change-playback-rate.html
@@ -32,7 +32,7 @@ limitations under the License.
 <div id="a" class="anim a"></div>
 
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var a1 = new Animation(document.querySelector("#a"),
