--- a/test/testcases/test-composite-transforms.html
+++ b/test/testcases/test-composite-transforms.html
@@ -59,7 +59,7 @@ limitations under the License.
 <div id="d" class="anim"></div>
 <div id="d" style="top: 550px; left: 0px;" class="expected"></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var divs = document.querySelectorAll(".anim");
