--- a/test/testcases/test-compositing-order.html
+++ b/test/testcases/test-compositing-order.html
@@ -42,7 +42,7 @@ div.anim {
 <div id="target1" class="anim"></div>
 <div id="target2" class="anim"></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var check = function(actual, expected, failureMessage) {
