--- a/test/testcases/test-duration.html
+++ b/test/testcases/test-duration.html
@@ -37,7 +37,7 @@ body.fail div#fail {
 <div id="fail">FAIL</div>
 <div id="anim"></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var check = function(actual, expected, failureMessage) {
