--- a/test/testcases/test-element-animate.html
+++ b/test/testcases/test-element-animate.html
@@ -23,7 +23,7 @@ body {
 </style>
 <body>
 PASS
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 document.body.animate({display: 'block'}, 1);
 </script>
