--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -114,7 +114,7 @@ reversed).</div>
   <div class="anim f"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
