--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -83,7 +83,7 @@ iteration (or start if reversed).</div>
   <div class="expected" style="width: 280px;"><div class="anim c"></div></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
