--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -98,7 +98,7 @@ limitations under the License.
   <div style="width: 200px;" class="expected"><div class="anim d"></div></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var fillModes = ["none", "backwards", "forwards", "both"];
