--- a/test/testcases/test-keyframe-creation.html
+++ b/test/testcases/test-keyframe-creation.html
@@ -75,7 +75,7 @@ limitations under the License.
   <div id="g" class="anim"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var dt = document.timeline;
