--- a/test/testcases/test-length-units.html
+++ b/test/testcases/test-length-units.html
@@ -48,7 +48,7 @@ Each cell in the table will start at the first value for the column (e.g. 5em,
 
 <table></table>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var from = ["1em", "1ex", "10px", "1rem", "5mm", "1cm", "1in", "10pt", "1pc"];
