--- a/test/testcases/test-non-numeric.html
+++ b/test/testcases/test-non-numeric.html
@@ -27,7 +27,7 @@ body {
 <div style='background:lightsteelblue'>
   <div style='background:red' id='test'></div>
 </div>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 document.timeline.createPlayer(new Animation(document.querySelector('#test'),
     {'display': ['none', 'block', 'none', 'block', 'none', 'block', 'none']},
