--- a/test/testcases/test-parent.html
+++ b/test/testcases/test-parent.html
@@ -35,7 +35,7 @@ limitations under the License.
 <div style="width: 300px;" class="expect"><div id="c" class="anim"></div></div>
 <div style="width: 300px;" class="expect"><div id="d" class="anim"></div></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var dt = document.timeline;
