--- a/test/testcases/test-path.html
+++ b/test/testcases/test-path.html
@@ -62,7 +62,7 @@ height: 500px;
 <div id="anim2">&rarr;</div>
 
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var animFunc = new PathAnimationFunction(
