--- a/test/testcases/test-preset-timings.html
+++ b/test/testcases/test-preset-timings.html
@@ -27,7 +27,7 @@ span {
 </style>
 <body>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 function testTiming(name) {
   var timingFun = new TimingFunction(name);
