--- a/test/testcases/test-repeated-pause.html
+++ b/test/testcases/test-repeated-pause.html
@@ -41,7 +41,7 @@ div.anim {
 <div id="fail">FAIL</div>
 <div id="anim" class="anim"></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var fail = function(failureMessage) {
