--- a/test/testcases/test-start-time-iterations.html
+++ b/test/testcases/test-start-time-iterations.html
@@ -78,7 +78,7 @@ that the position of the last element in each group is approximate.</div>
   <div style="width: 600px;" class="expected"><div class="anim b"></div></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
