--- a/test/testcases/test-svg-anim.html
+++ b/test/testcases/test-svg-anim.html
@@ -29,7 +29,7 @@ limitations under the License.
   </rect>
   <rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
 </svg>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 var rect = document.querySelector(".anim")
 
