--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -48,7 +48,7 @@ body { margin: 0px; }
   <div class="anim test">cubic-bezier(0.5, -1.5, 0.5, 2.5)</div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 document.timeline.createPlayer(new Animation(document.querySelector("#a"),
