--- a/test/testcases/test-to-animation.html
+++ b/test/testcases/test-to-animation.html
@@ -65,7 +65,7 @@ limitations under the License.
   <div id="d" class="anim"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var divs = document.querySelectorAll(".anim");
