--- a/test/testcases/test-visibility.html
+++ b/test/testcases/test-visibility.html
@@ -32,7 +32,7 @@ body {
   background: red;
 }
 </style>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 var timing = {duration: 0.5, timingFunction: 'steps(2, end)'};
 
