--- a/tutorial/iframe-contents.html
+++ b/tutorial/iframe-contents.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <script src='tutorial-testing.js'></script>
-    <script src='../web-animation.js'></script>
+    <script src='../web-animations.js'></script>
     <script src='try-it-yourself.js'></script>
     <script src='../test/extra-asserts.js'></script>
     <link href='../test/animation-test-style.css'>
