--- a/tutorial/sample-tutorial.html
+++ b/tutorial/sample-tutorial.html
@@ -18,7 +18,7 @@
   <div id="myDisplayDiv"></div>
   <script type="text/javascript" src="try-it-yourself.js"></script>
   <script type="text/javascript" src='tutorial-testing.js'></script>
-  <script type="text/javascript" src='../web-animation.js'></script>
+  <script type="text/javascript" src='../web-animations.js'></script>
   <script type="text/javascript" src='../test/extra-asserts.js'></script>
   <link type="text/css" href="../animation-test-style.css">
   <link rel="stylesheet" type="text/css" href="tutorial-style.css">
