--- a/web-animations-test.html
+++ b/web-animations-test.html
@@ -72,7 +72,7 @@ limitations under the License.
 
 
 
-<script src="web-animation.js"></script>
+<script src="web-animations.js"></script>
 <script>
 
 new Anim(document.querySelector(".anim"), {left: ["100px", "200px"]},
