--- a/test/example-test.html
+++ b/test/example-test.html
@@ -46,7 +46,7 @@ limitations under the License.
   <div class="anim"></div>
 </div>
 
-<script src="../web-animation.js"></script>
+<script src="../web-animations.js"></script>
 <script src="testharness/testharness.js"></script>
 <script src="testharness/testharnessreport.js"></script>
 <script src="extra-asserts.js"></script>
