--- a/test/example-test2.html
+++ b/test/example-test2.html
@@ -51,7 +51,7 @@ Written By Sarah Heimlich
   <div id="top" class="anim"></div>
 </div>
 
-<script src="../web-animation.js"></script>
+<script src="../web-animations.js"></script>
 <script src="testharness/testharness.js"></script>
 <script src="testharness/testharnessreport.js"></script>
 <script src="extra-asserts.js"></script>
