--- a/test/testcases/test-color-names.html
+++ b/test/testcases/test-color-names.html
@@ -16,7 +16,7 @@ limitations under the License.
 
 <!DOCTYPE html>
 <body>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var colors = [
