--- a/test/testcases/test-color.html
+++ b/test/testcases/test-color.html
@@ -56,7 +56,7 @@ All three boxes should end up the same color as the outline.
   <div id="c" class="anim"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var dt = document.timeline;
