--- a/test/testcases/test-fill-values.html
+++ b/test/testcases/test-fill-values.html
@@ -99,7 +99,7 @@ limitations under the License.
   <div style="width: 500px;" class="exp"><div id="h" class="anim"></div></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var containers = ["ca", "cb", "cc", "cd"];
