--- a/test/testcases/test-integer.html
+++ b/test/testcases/test-integer.html
@@ -27,7 +27,7 @@ position:absolute;
 </style>
 <body>
 <div id="test"></div>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 var width = 25;
 var totalWidth = 800;
