--- a/test/testcases/test-pause.html
+++ b/test/testcases/test-pause.html
@@ -57,7 +57,7 @@ limitations under the License.
 <div id="c" class="anim a"></div>
 <div id="d" class="anim b"></div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var a1 = new Animation(document.querySelector("#a"), {left: ["100px", "200px"]},
