--- a/test/testcases/test-playback-rate.html
+++ b/test/testcases/test-playback-rate.html
@@ -85,7 +85,7 @@ limitations under the License.
   <div class="anim g"></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var containers = ["ca", "cb"];
