--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -32,7 +32,7 @@ position: absolute;
 </style>
 <div id="expectation"></div>
 <div id="test"></div>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 var anim = {'clip': [
   'rect(300px, 400px, 300px, 400px)',
