--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -58,7 +58,7 @@ limitations under the License.
   <div style="width: 200px;" class="expected"><div class="anim b"></div></div>
 </div>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var containers = ["ca", "cb"];
