--- a/test/testcases/test-step.html
+++ b/test/testcases/test-step.html
@@ -27,7 +27,7 @@ span {
 </style>
 <body>
 
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 function testStep(numSteps, position) {
   var stepFun = new StepTimingFunction(numSteps, position);
