--- a/test/testcases/test-text-shadow.html
+++ b/test/testcases/test-text-shadow.html
@@ -16,7 +16,7 @@ limitations under the License.
 
 <!DOCTYPE html>
 <body>The shadows should slide back under the text.
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 document.timeline.createPlayer(new Animation(document.body,
     {'text-shadow': ['100px 100px red, 0px 100px 10px red', '0px 0px']}, 2));
