--- a/test/testcases/test-transform-3d.html
+++ b/test/testcases/test-transform-3d.html
@@ -44,7 +44,7 @@ limitations under the License.
 }
 </style>
 <div class="container"></div>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var transformValues = [
