--- a/test/testcases/test-transform-units.html
+++ b/test/testcases/test-transform-units.html
@@ -32,7 +32,7 @@ limitations under the License.
 }
 </style>
 <div></div>
-<script src="../../web-animation.js"></script>
+<script src="../../web-animations.js"></script>
 <script>
 
 var transformValues = [
