--- a/test/test-harness.html
+++ b/test/test-harness.html
@@ -13,56 +13,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<script>
-var tests = [
-  'test-bounds.html',
-  'test-calc.html',
-  'test-change-playback-rate.html',
-  'test-clone.html',
-  'test-color-names.html',
-  'test-color.html',
-  'test-composite-transforms.html',
-  'test-compositing-order.html',
-  'test-compositor.html',
-  'test-document-timeline.html',
-  'test-duration.html',
-  'test-fill-values.html',
-  'test-font-weight.html',
-  'test-grouped-anim-func.html',
-  'test-integer.html',
-  'test-iteration-start.html',
-  'test-iterations-basic.html',
-  'test-iterations-fill.html',
-  'test-keyframe-creation.html',
-  'test-length-units.html',
-  'test-modify-timing-params.html',
-  'test-non-numeric.html',
-  'test-parent-is-self.html',
-  'test-parent.html',
-  'test-path.html',
-  'test-pause.html',
-  'test-playback-rate.html',
-  'test-player.html',
-  'test-preset-timings.html',
-  'test-rectangle.html',
-  'test-reparent.html',
-  'test-repeated-pause.html',
-  'test-restart.html',
-  'test-seq-speed.html',
-  'test-set-parent.html',
-  'test-start-time-iterations.html',
-  'test-start-time.html',
-  'test-step.html',
-  'test-svg-anim.html',
-  'test-text-shadow.html',
-  'test-timing-functions.html',
-  'test-to-animation.html',
-  'test-transform-3d.html',
-  'test-transform-primitives.html',
-  'test-transform-units.html',
-  'test-visibility.html',
-];
-</script>
+<script src="testcases.js"></script>
 <style>
 iframe {
   width: 800px;
